[package]
name = "blake2err"
version = "0.1.0"
edition = "2018"


[dependencies]
dotenv = "0.15"
env_logger = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
harsh = "0.2.1"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.2"
jsonwebtoken = "7.1"
casbin = "=2.0.5"
# these rhai deps are needed for casbin v2.0.5
rhai = "=0.19.14"
rhai_codegen = "=0.3.3"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }